--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
         <h1 class="title">Weight Converter</h1>
         <div class="input-container">
             <label for="pounds">Pounds:</label>
-            <input type="number" class="input" id="input" step="0.1">
+            <input type="number" class="input" id="input" step="0.1" placeholder="Enter number" autocomplete="off">
         </div>
-
-
-        <p>Your weight in kg is: <span id="ans">100</span></p>
+        <p class="ans">Your weight in kg is: <span id="ans">100</span></p>
         <p class="error" id="error">Error</p>
 
         <script src="script.js"></script>
