--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <label for="pounds">Pounds:</label>
             <input type="number" class="input" id="input" step="0.1" placeholder="Enter number" autocomplete="off">
         </div>
-        <p class="ans">Your weight in kg is: <span id="ans">100</span></p>
+        <p class="ans">Your weight in kg is: <span id="ans"></span></p>
         <p class="error" id="error">Error</p>
 
         <script src="script.js"></script>
